# profile-backend

./: .gitignore  README.md  pyproject.toml  template.yaml
projects/: get_project.py  get_projects.py
tests/integration/: test_api_gateway.py
tests/unit/: mock_dynamodb.py  test_get_project.py  test_get_projects.py  test_handler.py
