[tool.poetry]
name = "profile-backend"
version = "0.1.0"
description = ""
authors = ["Isai Ramirez <86127102+CodeSwallow@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "profile_backend"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.133"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

