[tool.poetry]
name = "profile-backend"
version = "0.1.0"
description = ""
authors = ["Isai Ramirez <86127102+CodeSwallow@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "profile_backend"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.133"
pytest = "^7.3.1"
moto = "^4.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

